# GrowthLint

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  VERSIONS.md  pyproject.toml  validate-skills.sh
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json
.claude/skills/check-integrations/: SKILL.md
.claude/skills/check-seo/: SKILL.md
.claude/skills/compare-sites/: SKILL.md
.claude/skills/find-dead-links/: SKILL.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  rule-request.yml  skill-request.yml
.github/PULL_REQUEST_TEMPLATE/: documentation.md  new-rule.md  new-skill.md
.github/workflows/: growthlint.yml
examples/: sample_analytics_spec.md  sample_audit_report.md  sample_funnel_map.md
growthlint/: __init__.py  ci.py  cli.py  config.py  models.py
growthlint/analyzers/: competitor_diff.py  consent_audit.py  dead_links.py  integration_health.py  message_matcher.py  page_psychology.py  playbook_harvester.py  schema_finder.py
growthlint/data/: analytics_rules.yaml  attribution_rules.yaml  conversion_rules.yaml  psychology_rules.yaml  seo_rules.yaml  shopify_rules.yaml  webflow_rules.yaml  wordpress_rules.yaml
growthlint/generators/: analytics_spec.py  badge_generator.py  funnel_mapper.py  growth_diff.py  patch_generator.py
growthlint/reporters/: csv_report.py  json_report.py  markdown_report.py
growthlint/rules/: engine.py  loader.py
growthlint/scanners/: dom_parser.py  platform_detector.py  repo_scanner.py  sitemap_scanner.py  url_scanner.py
growthlint/utils/: http.py  scoring.py
tests/: conftest.py  test_analyzers.py  test_cli.py  test_generators.py  test_new_features.py  test_platform.py  test_rules.py  test_scanners.py
(+13 files in other folders)
